--- a/kustomize/ingress.yaml
+++ b/kustomize/ingress.yaml
@@ -22,3 +22,13 @@ spec:
                 name: front-end
                 port:
                   number: 80
+    - host: dunnu.codekami.tech
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: dunnu
+                port:
+                  number: 80
